# 2026-cognee-dify-hackathon

./: .gitignore  PRESENTATION.md  README.md  app.py  ingest_data.py  ingest_rest.py  pyproject.toml  search_test.py  test_conversation.md
api/: config.py  main.py  schemas.py
api/services/: cognee.py
api/v2/: router.py  schemas.py  service.py
demo_assets/: berlin_hackathon_conflict.aiff  berlin_hackathon_conflict_script.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/components/: FeedbackGraph.jsx
ios/: README.md
ios/BrainSyncV2/: APIClient.swift  BrainSyncV2App.swift  BrainSyncViewModel.swift  ContentView.swift  Info.plist  LocalGemmaQuizGenerator.swift  Models.swift
slides/: package-lock.json  package.json  slides.md
test_data/: berlin_hackathon_demo_test_cases.json  test_conversation.md  test_conversation_v2.md  test_conversation_v4.md
